# openmap

./: .classpath  .gitignore  .project  ANT_ENV.bat  AUTHORS  CHANGELOG  DeveloperHints.md  INSTALL  INSTALL.win32  LICENSE  Makefile  Makefile.in  NewVersion-HOWTO  OpenMap.md  OpenMapApplications.md  OpenMapLicense.md  ProjectHome.md  README  README.win32  Testing-HOWTO  UsingMapTiles.md  WISHLIST.txt  aclocal.m4  autobuild  autobuild.cron  build.xml  buildall.bat  configure  configure.in  corba.mk  install-sh  jar.mk  java.mk  logging.properties  nbbuild.xml  openmap.mk  openmap.mk.in  openmap.properties  pom.xml  removeall.bat  (+3 more)
doc/: FAQ-1.html  FAQ-2.html  FAQ-3.html  FAQ.html  doc-index.html  index.html  openmap-arch-1.html  openmap-arch-2.html  openmap-arch-3.html  openmap-arch-4.html  openmap-arch.html  user-guide-1.html  user-guide-2.html  user-guide-3.html  user-guide-4.html  user-guide.html
doc/images/: openmap_image_toolkit.ps
doc/sgml/: FAQ.README  FAQ.sgml  NEWFAQ.sgml  openmap-arch.sgml  user-guide.sgml
ext/: README
ext/jakarta-ant-1.5.1/: KEYS  LICENSE.dom  LICENSE.sax  README  README.BBN  WHATSNEW  welcome.html
ext/jakarta-ant-1.5.1/etc/: changelog.xsl  coverage-frames.xsl  jdepend-frames.xsl  jdepend.xsl  junit-frames.xsl  junit-noframes.xsl  tagdiff.xsl
ext/jakarta-ant-1.5.1/lib/: README
ext/sqlitejdbc/: License.html
iis/: README.TXT
iis/ImageWebService/: AssemblyInfo.vb  GetMapService.asmx  GetMapService.asmx.vb  Global.asax  ImageWebService.vbproj  ImageWebService.vbproj.webinfo  ProperService.asmx  ProperService.asmx.vb  TimerService.asmx  TimerService.asmx.vb  Web.config
iis/OpenMapWeb/: AssemblyInfo.vb  Global.asax  MapImage.aspx  MapImage.aspx.vb  OpenMapWeb.vbproj  OpenMapWeb.vbproj.webinfo  Web.config  WebMap.aspx  WebMap.aspx.vb
lib/: .gitignore
nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
share/: manifest.txt  omapplet.html  openmap.jnlp  openmap.properties  vmap_area_thin.ssx
share/data/: cities.csv
share/data/scenario/: org-activities.csv  org-list.csv
share/data/shape/: vmap_area_thin.shp  vmap_edge_thin.shp  vmap_edge_thin.ssx
share/data/shape/cntry02/: cntry02.avl  cntry02.dbf  cntry02.sbn  cntry02.sbx  cntry02.shp  cntry02.shp.xml  cntry02.shx  cntry02.ssx
share/data/vpf/: README  dnc-priority-all.csv  dnc-priority-background.csv  dnc-priority-depth-contours.csv  dnc-symbol-lookup.csv  vmaplv0-priority-iw.csv  vmaplv0-symbol-lookup.csv
src/: Makefile  pom.xml
src/corba/: Makefile  build.xml
src/corba/com/: Makefile
src/corba/com/bbn/: Makefile
src/corba/com/bbn/openmap/: Makefile
src/core/: .classpath  .project  build.xml  pom.xml
src/cserver/: makefile
src/cserver/link/include/: Link.h  LinkBitmap.h  LinkCircle.h  LinkEllipse.h  LinkGrid.h  LinkImage.h  LinkLine.h  LinkPoint.h  LinkPoly.h  LinkRaster.h  LinkRectangle.h  LinkSocket.h  LinkText.h  MapRequest.h  Request.h
src/cserver/link/src/: ActionRequest.c  Link.c  LinkArgs.c  LinkBitmap.c  LinkCircle.c  LinkEllipse.c  LinkGrid.c  LinkImage.c  LinkLine.c  LinkPoint.c  LinkPoly.c  LinkRaster.c  LinkRectangle.c  LinkSemantics.c  LinkServer.c  LinkSocket.c  LinkText.c  MapRequest.c  Request.c  Response.c  makefile
src/cserver/toolLib/include/: auto_input.h  auto_output.h  buffers.h  compat.h  compress.h  debugging.h  error_hand.h  free_mgr.h  listtools.h  mapped_files.h  plumbing.h  sockets.h  stringutil.h  style.h
src/cserver/toolLib/src/: Magic.c  auto_input.c  auto_output.c  buffers.c  compress.c  error_hand.c  free_mgr.c  makefile  mapped_files.c  plumbing.c  sockets.c  stringutil.c
src/ext/Acme/: IntHashtable.java
src/ext/Acme/JPM/Encoders/: GifEncoder.java  ImageEncoder.java  JpegEncoder.java  PpmEncoder.java
src/ext/doppelt/: Quantize.java
src/ext/edu/stanford/ejalbert/: BrowserLauncher.java
src/ext/org/geotiff/epsg/: InvalidCodeException.java
src/ext/org/geotiff/image/: KeyRegistry.java
src/j3d/: .project  Makefile  build.xml  pom.xml
src/j3d/com/: Makefile
src/j3d/com/bbn/: Makefile
src/j3d/com/bbn/openmap/: Makefile
src/mac/: README
src/mac/OpenMap.app/Contents/: Info.plist
src/mac/OpenMap.app/Contents/MacOS/: JavaApplicationStub
src/mac/OpenMap.app/Contents/Resources/: OpenMap.icns
src/maptileservlet/: .gitignore  .project  README  build.xml  pom.xml  tileset1.properties  tileset2.properties
src/maptileservlet/WEB-INF/: web.xml
src/maptileservlet/WEB-INF/classes/: tileset1.properties  tileset2.properties
src/maptileservlet/src/main/resources/: tileset1.properties  tileset2.properties
src/maptileservlet/tileSetProperties/: tileset1.properties  tileset2.properties  tileset3.properties  tileset4.properties
src/openmap/: Makefile  build.xml  openmap_build.xml  pom.xml
src/openmap/com/: Makefile
src/openmap/com/bbn/: Makefile
src/openmap/com/bbn/openmap/: BasicI18n.java  BufferedLayerMapBean.java  BufferedMapBean.java  DMSLatLonPoint.java  Environment.java  HintsMapBeanRepaintPolicy.java  I18n.java  InformationDelegator.java  LatLonPoint.java  Layer.java  LayerHandler.java  LightMapHandlerChild.java  MGRSPoint.java  Makefile  MapBean.java  MapBeanRepaintPolicy.java  MapHandler.java  MapHandlerChild.java  MoreMath.java  MouseDelegator.java  MultipleSoloMapComponentException.java  OMComponent.java  PanDelayMapBeanRepaintPolicy.java  ProjectionPainter.java  PropertyConsumer.java  PropertyHandler.java  SoloMapComponent.java  SoloMapComponentPolicy.java  SoloMapComponentRejectPolicy.java  SoloMapComponentReplacePolicy.java  StandardMapBeanRepaintPolicy.java  UTMPoint.java  package.html
src/svg/: .project  Makefile  build.xml  pom.xml
src/svg/com/: Makefile
src/svg/com/bbn/: Makefile
src/svg/com/bbn/openmap/: Makefile
src/vpfbrowseservlet/: .gitignore  .project  README  build.xml  nb-configuration.xml  pom.xml
src/vpfbrowseservlet/src/main/webapp/: PrintTable.jsp  (+2 more)
src/vpfservlet/: README  build.xml  stylesheet.css
src/vpfservlet/WEB-INF/: web.xml
src/wmsservlet/: .gitignore  .project  README.txt  build.xml  pom.xml
src/wmsservlet/WEB-INF/: web.xml
(+3090 files in other folders)
